# k-ssh-agent

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
src/: agent.rs  bitwarden.rs  config.rs  config_aware_provider.rs  default_keys.rs  error.rs  key_provider.rs  lib.rs  main.rs  service.rs  ssh_config_parser.rs  ssh_proto.rs  system_agent.rs
tests/: integration.rs
